[build-system]
requires = ["setuptools"]

[project]
name = "pysubnettree"
description = "Map subnets in CIDR notation to Python objects"
readme = "README"
dynamic = ["version"]

license = { text = "3-clause BSD License" }

requires-python = ">=3.9"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: BSD :: FreeBSD',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3',
    'Topic :: System :: Networking',
    'Topic :: Utilities',
]

[project.urls]
Repository = "https://github.com/zeek/pysubnettree"

[[project.maintainers]]
name = "The Zeek Team"
email = "info@zeek.org"

[tool.ruff]
exclude = ["SubnetTree.py"]
