[build-system]
requires = ["setuptools>=77.0.3"]

[project]
name = "pysubnettree"
description = "Map subnets in CIDR notation to Python objects"
readme = "README"
dynamic = ["version"]
license-files = ["COPYING"]

requires-python = ">=3.10"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: BSD :: FreeBSD',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3',
    'Topic :: System :: Networking',
    'Topic :: Utilities',
]

[project.urls]
Repository = "https://github.com/zeek/pysubnettree"

[[project.maintainers]]
name = "The Zeek Team"
email = "info@zeek.org"

[tool.ruff]
exclude = ["SubnetTree.py"]

[tool.ruff.lint]
select = ["C4", "F", "I", "ISC", "UP"]
